my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENPARAM/T_ENPARAM-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ENPARAM_STRUCT_H
#define T_ENPARAM_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ENPARAM(void);


#endif /* not T_ENPARAM_STRUCT_H */
